--- a/style.css
+++ b/style.css
@@ -1,6 +1,1 @@
-.button {
-	display: inline-block;
-	padding: 5px 10px;
-	margin: 0 10px;
-	background-color: #162A33;
-}
+.button{display:inline-block;padding:5px 10px;margin:0 10px;background-color:#162A33}
