--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,15 @@
+$white: #FFFFFF;
+$blue: #162A33;
+
 .button {
 	display: inline-block;
 	padding: 5px 10px;
 	margin: 0 10px;
-	background-color: #162A33;
+	background-color: $blue;
+	color: $white;
+
+	&:hover, &:focus {
+		border-bottom: 0;
+		color: lighten( $blue, 20% );
+	}
 }
