--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,14 @@
 $white: #FFFFFF;
 $blue: #162A33;
 
+/**
+ * General Entry Content Styles
+ */
 .entry-content {
+	ul {
+		padding-left: 1em;
+	}
+
 	.button, a.button, button {
 		display: inline-block;
 		padding: 5px 10px;
@@ -17,5 +24,45 @@ $blue: #162A33;
 			box-shadow: none !important;
 			background-color: lighten( $blue, 20% );
 		}
+	}
+}
+
+/**
+ * Styles for interior pages
+ */
+body.page:not(.twentyseventeen-front-page) {
+	.custom-header-media {
+		&::before {
+			background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.3) 100%)
+		}
+	}
+
+	.entry-title {
+		font-size: 2em;
+	}
+}
+
+.single-featured-image-header {
+	position: relative;
+	height: 300px;
+	overflow: hidden;
+
+	img {
+		position: absolute;
+		top:50%;
+		transform: translateY(-50%);
+	}
+}
+
+/**
+ * Styles for the Jetpack contact form
+ */
+.contact-form {
+	label {
+		font-weight: 400 !important;
+	}
+
+	input.radio {
+		margin-right: 0.5em;
 	}
 }
