better styling for site branding

--- a/style.scss
+++ b/style.scss
@@ -93,3 +93,7 @@ body.page:not(.twentyseventeen-front-page) {
 	height: 620px;
 	margin: -36px 0 0;
 }
+
+.home .site-branding-text {
+	display: none;
+}
