better better styling for site branding

--- a/style.scss
+++ b/style.scss
@@ -95,5 +95,6 @@ body.page:not(.twentyseventeen-front-page) {
 }
 
 .home .site-branding-text {
-	display: none;
+	position: absolute;
+	left: -999em;
 }
