--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
 $white: #FFFFFF;
 $blue: #162A33;
-
 /**
  * General Entry Content Styles
  */
@@ -9,7 +8,9 @@ $blue: #162A33;
 		padding-left: 1em;
 	}
 
-	.button, a.button, button {
+	.button,
+	a.button,
+	button {
 		display: inline-block;
 		padding: 5px 10px;
 		margin: 0 10px;
@@ -19,21 +20,21 @@ $blue: #162A33;
 		text-transform: uppercase;
 		font-weight: 100;
 
-		&:hover, &:focus {
+		&:focus,
+		&:hover {
 			color: $white !important;
 			box-shadow: none !important;
 			background-color: lighten( $blue, 20% );
 		}
 	}
 }
-
 /**
  * Styles for interior pages
  */
 body.page:not(.twentyseventeen-front-page) {
 	.custom-header-media {
 		&::before {
-			background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.3) 100%)
+			background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.3) 100%);
 		}
 	}
 
@@ -41,24 +42,21 @@ body.page:not(.twentyseventeen-front-page) {
 		font-size: 2em;
 	}
 }
-
 // Single page featured images are max 300px tall
 .single-featured-image-header {
 	position: relative;
 	height: 300px;
 	overflow: hidden;
-
 	// Image is vertically and horizontally aligned
 	img {
 		position: absolute;
-		top:50%;
+		top: 50%;
 		left: 0;
 		right: 0;
 		transform: translateY(-50%);
-		margin: auto auto;
+		margin: auto;
 	}
 }
-
 /**
  * Styles for the Jetpack contact form
  */
@@ -71,31 +69,29 @@ body.page:not(.twentyseventeen-front-page) {
 		margin-right: 0.5em;
 	}
 }
-
 /**
  * Styles for the homepage hero image
  */
 .home {
-
 	.custom-header-media:after {
-	    position: absolute;
-	    display: block;
-	    top: 50%;
-	    left: 50%;
-	    transform: translate(-50%,-50%);
-	    z-index: 2;
-	    content: "";
-	    background-image: url(http://2017.austin.wordcamp.org/files/2017/06/WCATX_weblogo_color-date.png);
-	    background-repeat: no-repeat;
-	    background-size: contain;
-	    background-color: rgba(255,255,255,0.9);
-	    background-position: center;
-	    border-radius: 50px;
-	    width: 90%;
-	    height: 90%;
+		position: absolute;
+		display: block;
+		bottom: 0;
+		left: 50%;
+		transform: translateX(-50%);
+		z-index: 2;
+		content: "";
+		background-image: url("http://2017.austin.wordcamp.org/files/2017/06/WCATX_weblogo_color-date.png");
+		background-repeat: no-repeat;
+		background-size: 75%;
+		background-color: #FFF;
+		background-position: center;
+		width: 90%;
+		height: 90%;
 		max-width: 450px;
-	    max-height: 550px;
-	    margin: 0;
+		max-height: 550px;
+		margin: 0;
+		-webkit-mask: url("http://2017.austin.wordcamp.org/files/2017/08/home-logo-cutout.png") 0 0/107% no-repeat;
 	}
 
 	.site-branding-text {
@@ -103,9 +99,8 @@ body.page:not(.twentyseventeen-front-page) {
 		left: -999em;
 	}
 }
-
 @media (min-width: 48em) {
 	.home .custom-header-media:after {
-			top: calc(50% - 36px);
+		top: calc(50% - 36px);
 	}
 }
