--- a/style.scss
+++ b/style.scss
@@ -1,102 +1,16 @@
+/**
+ * Custom Styles to modify TwentySeventeen for
+ * https://2017.austin.wordcamp.org
+ *
+ * @package twentyseventeen
+ */
+
+// Variables
 $white: #FFFFFF;
 $blue: #162A33;
-/**
- * General Entry Content Styles
- */
-.entry-content {
-	ul {
-		padding-left: 1em;
-	}
+$gutter: 1em;
 
-	.button,
-	a.button,
-	button {
-		display: inline-block;
-		padding: 5px 10px;
-		margin: 0 10px;
-		box-shadow: none;
-		background-color: $blue;
-		color: $white;
-		text-transform: uppercase;
-		font-weight: 100;
-
-		&:focus,
-		&:hover {
-			color: $white !important;
-			box-shadow: none !important;
-			background-color: lighten( $blue, 20% );
-		}
-	}
-}
-/**
- * Styles for interior pages
- */
-body.page:not(.twentyseventeen-front-page) {
-	.custom-header-media {
-		&::before {
-			background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0.3) 100%);
-		}
-	}
-
-	.entry-title {
-		font-size: 2em;
-	}
-}
-// Single page featured images are max 300px tall
-.single-featured-image-header {
-	position: relative;
-	height: 300px;
-	overflow: hidden;
-	// Image is vertically and horizontally aligned
-	img {
-		position: absolute;
-		top: 50%;
-		left: 0;
-		right: 0;
-		transform: translateY(-50%);
-		margin: auto;
-	}
-}
-/**
- * Styles for the Jetpack contact form
- */
-.contact-form {
-	label {
-		font-weight: 400 !important;
-	}
-
-	input.radio {
-		margin-right: 0.5em;
-	}
-}
-/**
- * Styles for the homepage hero image
- */
-.home {
-	.custom-header-media:after {
-		position: absolute;
-		display: block;
-		bottom: 0;
-		left: 50%;
-		transform: translateX(-50%);
-		z-index: 2;
-		content: "";
-		background-image: url("http://2017.austin.wordcamp.org/files/2017/06/WCATX_weblogo_color-date.png");
-		background-repeat: no-repeat;
-		background-size: 75%;
-		background-color: #FFF;
-		background-position: center;
-		width: 90%;
-		height: 90%;
-		max-width: 450px;
-		max-height: 550px;
-		margin: 0;
-		--webkit-mask: url(/files/2017/08/home-logo-cutout.png) 0 0/107% no-repeat;
-		mask: url(/files/2017/08/home-logo-cutout.png) 0 0/107% no-repeat;
-	}
-
-	.site-branding-text {
-		position: absolute;
-		left: -999em;
-	}
-}
+// Imports
+@import 'sass/headers';
+@import 'sass/content';
+@import 'sass/shortcodes';
