--- a/sass/_headers.scss
+++ b/sass/_headers.scss
@@ -29,7 +29,7 @@
 		background-image: url("http://2017.austin.wordcamp.org/files/2017/06/WCATX_weblogo_color-date.png");
 		background-repeat: no-repeat;
 		background-size: 75%;
-		background-color: #FFF;
+		background-color: $white;
 		background-position: center;
 		width: 90%;
 		height: 90%;
